--- a/libft/Makefile
+++ b/libft/Makefile
@@ -17,7 +17,7 @@ SRC = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c f
 		ft_calloc.c ft_strdup.c\
 		ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c\
 		ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c\
-		ft_free_mem.c ft_free_arr.c ft_utoa.c ft_xtoa.c ft_strmap.c ft_llitoa.c ft_llutoa.c ft_llxtoa.c ft_revstrchr.c ft_pow.c ft_dtoa.c
+		ft_free_mem.c ft_free_arr.c ft_utoa.c ft_xtoa.c ft_strmap.c ft_llitoa.c ft_llutoa.c ft_llxtoa.c ft_revstrchr.c ft_pow.c ft_strrev.c
 OBJ = $(SRC:.c=.o)
 HEADER = libft.h
 CFLAGS = -Wall -Wextra -Werror
